<resources>
    <string name="app_name">Kepo</string>
    <string name="make_stalking_easier">Make Stalking Easier!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="_2020_by_mobile_team">© 2020 by Mobile Team</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="welcome">Welcome, </string>
    <string name="my_todo">My Todo</string>
    <string name="search_todo">Search Todo</string>
    <string name="search_user">Search User</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="here_all_your_todos">Here all your todos!</string>
    <string name="todo_title">Todo Title</string>
    <string name="last_edited">Last Edited :</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="create_todo">Create Todo</string>
    <string name="error_message">Error Message</string>
    <string name="result_for">Result for</string>
    <string name="by_user">by user</string>
    <string name="by_todo">by Todo</string>
    <string name="no_data">No Data</string>
    <string name="todos">Todos:</string>
    <string name="count_todos">count Todos</string>
    <string name="delete_todo">Delete Todo</string>
</resources>