<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="user"
            type="com.example.kepo.model.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true"

            tools:context=".LoginActivity">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_sm"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/make_stalking_easier"
                android:gravity="center"
                android:textSize="15sp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:ems="15"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border_edittext"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@={user.username}"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:ems="15"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_border_edittext"
                android:textSize="15sp"
                android:padding="10dp"
                android:text="@={user.password}"
                android:inputType="textPassword"
                />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:background="@drawable/rounded_border_button_login"
                android:layout_marginTop="15dp"
                android:textSize="15sp"

                />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"/>
        
        <ProgressBar
            android:id="@+id/pb_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />

    </RelativeLayout>

</layout>