<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LogoutFragment"
    android:background="@drawable/ic_background_symbol">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Are you sure want to logout?"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="40dp"
                android:layout_gravity="end"
                >

                <TextView
                    android:id="@+id/tv_no_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textColor="@color/RoyalBlue"
                    />

                <TextView
                    android:id="@+id/tv_yes_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/RoyalBlue"
                    />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>