<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="todo"
            type="com.example.kepo.model.ToDo" />
    </data>

    <RelativeLayout
        android:id="@+id/rl_result_to_do"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_todo_list_menu"
        android:padding="25dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{todo.toDoTitle}"
                android:hint="@string/todo_title"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_edited"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{todo.toDoLastModified}"
                    android:hint="last modified"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_person"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{todo.toDoUsername}"
                    android:layout_marginLeft="5dp"
                    android:hint="@string/username"
                    android:layout_gravity="center_vertical"
                    />
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</layout>