<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WhiteSmoke">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            >

            <RelativeLayout
                android:id="@+id/rl_nav_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:id="@+id/iv_back_to_previous_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    />

                <EditText
                    android:id="@+id/et_search_todo"
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/search_todo"
                    android:ems="16"
                    android:background="@drawable/rounded_border_edittext_create_update"
                    android:textSize="15sp"
                    android:padding="10dp"
                    android:text=""
                    />

                <ImageView
                    android:id="@+id/iv_search_to_do"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_search_todo"
                    android:layout_gravity="right"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/ll_filter_search_todo_by_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/rl_nav_header"
                android:layout_centerHorizontal="true"
                >

                <CheckBox
                    android:id="@+id/cb_search_todo_by_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_user"
                    />

                <CheckBox
                    android:id="@+id/cb_search_todo_by_todo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/by_todo"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_result_search_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ll_filter_search_todo_by_cb"
                android:visibility="gone"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/result_for"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" "
                    />

                <TextView
                    android:id="@+id/tv_display_result_search_to_do"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:hint="@string/result_for"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/ll_result_search_todo"
                android:layout_marginTop="20dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_search_todos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_display_show_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:layout_centerInParent="true"
                android:visibility="gone"
                />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pb_search_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />

    </RelativeLayout>

</layout>