<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="user"
            type="com.example.kepo.model.User" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WhiteSmoke"
        >

        <RelativeLayout
            android:id="@+id/rv_active_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_header_active_user"
            >
            <LinearLayout
                android:id="@+id/ll_active_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:paddingBottom="60dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{user.name}"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:hint="@string/username"
                    android:gravity="center"
                    />
            </LinearLayout>
        </RelativeLayout>


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:id="@+id/rl_my_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_todo_list_menu"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_todo"
                        android:layout_alignParentLeft="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_todo"
                        android:layout_centerInParent="true"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_todo"
                        android:layout_gravity="right"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_search_todo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_todo_list_menu"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search_todo"
                        android:layout_alignParentLeft="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_todo"
                        android:layout_centerInParent="true"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search_todo"
                        android:layout_gravity="right"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_search_user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_todo_list_menu"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search_users"
                        android:layout_alignParentLeft="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/search_user"
                        android:layout_centerInParent="true"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_search_users"
                        android:layout_gravity="right"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_todo_list_menu"
                    android:padding="25dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_face_profile"
                        android:layout_alignParentLeft="true"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile"
                        android:layout_centerInParent="true"
                        />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_face_profile"
                        android:layout_gravity="right"
                        android:layout_alignParentRight="true"
                        />

                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

</layout>