<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WhiteSmoke">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            >

            <LinearLayout
                android:id="@+id/ll_nav_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/iv_back_to_previous_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_title_my_to_do"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/ll_nav_header"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_todo"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/here_all_your_todos"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_above="@+id/fab_add_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/ll_title_my_to_do"
                android:layout_marginTop="30dp"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_my_todos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </androidx.recyclerview.widget.RecyclerView>

            </LinearLayout>


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_add"
                android:tint="@android:color/white"
                app:backgroundTint="@color/RoyalBlue"
                />

            <TextView
                android:id="@+id/tv_display_show_no_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_data"
                android:layout_centerInParent="true"
                android:visibility="gone"
                />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pb_search_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />


        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</layout>