<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>
        <variable
            name="todo"
            type="com.example.kepo.model.ToDo" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/WhiteSmoke">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            >

            <LinearLayout
                android:id="@+id/ll_nav_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <ImageView
                    android:id="@+id/iv_back_to_previous_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_title__create_to_do"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/ll_nav_header"
                android:layout_marginTop="20dp"
                >

                <TextView
                    android:id="@+id/tv_create_uodate_to_do"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_todo"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your todo will be visible to others"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_form_create_update"
                android:layout_above="@+id/fab_add_todo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/ll_title__create_to_do"
                android:layout_marginTop="70dp"
                >

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:ems="15"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/rounded_border_edittext_create_update"
                    android:textSize="15sp"
                    android:padding="15dp"
                    android:text="@={todo.toDoTitle}"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    app:counterEnabled="true"
                    app:counterMaxLength="100"

                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:background="@drawable/rounded_border_edittext_create_update"
                        android:textSize="15sp"
                        android:gravity="top|left"
                        android:hint="@string/description"
                        android:text="@={todo.toDoDescription}"
                        android:inputType="textMultiLine"
                        android:lines="5"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tv_message_error_insert_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error_message"
                    android:textColor="@color/Red"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_marginTop="25dp"
                    />

            </LinearLayout>



            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_create_update_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_update"
                android:tint="@android:color/white"
                app:backgroundTint="@color/RoyalBlue"
                />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/pb_loading_api"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </RelativeLayout>

</layout>